Added more methods in plugins - addRecipes, attachServerData, attachWorldData, attachPlayerData